[project]
name = "pycro-gym"
version = "0.1.0"
description = ""
authors = [
    {name = "Kenneth Hill"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "pycro_gym", from = "src"}]

[tool.poetry.dependencies]
pandas = "^2.0"
pycro_rts = {path = "../pycro-rts", develop = true}
sb3-contrib = "^2.0"
tensorboard = "^2.2.0"


[tool.poetry.scripts]
pycro-gym = "pycro_gym.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
